2006-07-24  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: New disable_reload and is_reload_disabled class
	methods allow temporarily inhibiting check for changes to on-disk
	dpkg status db vs already-loaded copy.

	* Engine.pm, Package.pm: disable dpkg status reloading during
	tight listing loops.

2006-07-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Don't be fooled by weird commands in line after #!

2006-07-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: make sure /usr/bin/machine is an executable before 
	we call it

2006-07-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: new virtual package "64bit-cpu"

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: No progress bar interruptions, so no need to cache it

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Have logfile filename always use parent %n

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Clean up diagnostics while caching .info files

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Add progress bar for indexer .info processing loop.

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Make cache staleness check independent of whether
	STDOUT is a terminal.

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Remove unused variable. Check a variable directly
	instead of using a secondary variable for metadata. Factor a
	&get_term_width call out of a loop.

2006-07-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify.pm: make it so people won't confuse the plugin list
	with installed/uninstalled packages

2006-07-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: test for the existence of $cctools_version before
	applying a comparison operator to it

2006-07-10  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Enable 'cleanup --dpkg-status'

2006-06-29  Dave Morrison  <dmrrsn@users.sourceforge.net>
