@@ -128,7 +128,7 @@ Description: Package compile-time lockfile
    $pkgname ($pkgvers)
  and the build process begun at $timestamp
  .
- Web site: http://wiki.opendarwin.org/index.php/Fink:buildlocks
+ Web site: http://wiki.finkproject.org/index.php/Fink:buildlocks
  .
  Maintainer: Fink Core Group <fink-core\@lists.sourceforge.net>
 Maintainer: Fink Core Group <fink-core\@lists.sourceforge.net>
@@ -233,7 +233,7 @@ Regardless of the cause of the lock failure, don't worry: you have not
 wasted compiling time! Packages that had been completely built before
 this error occurred will not have to be recompiled.
 
-See http://wiki.opendarwin.org/index.php/Fink:buildlocks for more information.
+See http://wiki.finkproject.org/index.php/Fink:buildlocks for more information.
 EOMSG
 
 		# Failure due to dependency problems leaves lockpkg in an
